Add treatment and more info

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				<a href="index.html">Main Info</a>
 				<a href="symptoms.html">Symptoms</a>
 				<a href="index.html">More Info</a>
-				<a href="index.html">Treatment</a>
+				<a href="treatment.html">Treatment</a>
 				<a href="biblio.html">Bibliography</a>
 			</nav>
 		</header>
