Finish pages and edit navs

--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
 		<meta charset="UTF-8" />
 	</head>
 	<body>
-		<header>
-			<nav>
-				<a href="index.html">Main Info</a>
-				<a href="symptoms.html">Symptoms</a>
-				<a href="index.html">More Info</a>
-				<a href="treatment.html">Treatment</a>
-				<a href="biblio.html">Bibliography</a>
-			</nav>
-		</header>
+		<nav>
+			<a href="index.html">Main Info</a>
+			<a href="symptoms.html">Symptoms</a>
+			<a href="info.html">More Info</a>
+			<a href="treatment.html">Treatment</a>
+			<a href="biblio.html">Bibliography</a>
+		</nav>
 		<main>
 			<h1>Malaria</h1>
 			<p>Malaria is caused by a parasite that is spread into the bloodstream by mosquitoes. It is life-threatening if left alone, but preventable and curable. It is common in tropical and subtropical countries. In 2017 alone, 219 million people were diagnosed with it, and 435,000 died from it, in only 87 countries.</p>
