--- a/info.html
+++ b/info.html
@@ -9,14 +9,14 @@
 			<nav>
 				<a href="index.html">Main Info</a>
 				<a href="symptoms.html">Symptoms</a>
-				<a href="index.html">More Info</a>
+				<a href="info.html">More Info</a>
 				<a href="treatment.html">Treatment</a>
 				<a href="biblio.html">Bibliography</a>
 			</nav>
 		</header>
 		<main>
 			<h1>More Info</h1>
-			<p>Malaria is a blood borne disease caused by mosquitos. This is a very deadly disease with nearly half the world at risk. Africa has the most diagnosis and deaths to this disease. The US only gets 1,700 cases a year. In 2017, 219 million were diagnosed at 435,000 died. This is one of the most deadly and popular diseases in the word. This disease is deadly but if treated in 2 weeks, the disease can be cured. Mostly children are at risk of this disease</p>
+			<p>Malaria is a blood borne disease caused by mosquitoes. This is a very deadly disease with nearly half the world at risk. Africa has the most diagnosis and deaths to this disease. The US only gets 1,700 cases a year. In 2017, 219 million were diagnosed at 435,000 died. This is one of the most deadly and popular diseases in the word. This disease is deadly but if treated in 2 weeks, the disease can be cured. Mostly children are at risk of this disease, especially infants.</p>
 		</main>
 	</body>
 </html>
