--- a/symptoms.html
+++ b/symptoms.html
@@ -5,13 +5,13 @@
 		<meta charset="UTF-8" />
 	</head>
 	<body>
-		<header>
-			<nav>
-				<a href="index.html">Main Info</a>
-				<a href="symptoms.html">Symptoms</a>
-				<a href="biblio.html">Bibliography</a>
+		<nav>
+			<a href="index.html">Main Info</a>
+			<a href="symptoms.html">Symptoms</a>
+			<a href="info.html">More Info</a>
+			<a href="treatment.html">Treatment</a>
+			<a href="biblio.html">Bibliography</a>
 			</nav>
-		</header>
 		<main>
 			<h1>Symptoms</h1>
 			<p>If you have malaria, the symptoms you might experience are:</p>
