Create css and touch up all the pages

--- a/biblio.html
+++ b/biblio.html
@@ -3,24 +3,24 @@
 	<head>
 		<title>Bibliography</title>
 		<meta charset="UTF-8" />
+		<link rel="stylesheet" type="text/css" href="malaria.css" />
 	</head>
 	<body>
-		<nav>
-			<a href="index.html">Main Info</a>
-			<a href="symptoms.html">Symptoms</a>
-			<a href="info.html">More Info</a>
-			<a href="treatment.html">Treatment</a>
-			<a href="biblio.html">Bibliography</a>
-		</nav>
 		<main>
-			<h1>Bibliography</h1>
+			<h1 id="biblio">Bibliography</h1>
+			<hr />
+			<nav>
+				<a href="index.html">Main Info</a>
+				<a href="symptoms.html">Symptoms</a>
+				<a href="info.html">More Info</a>
+				<a href="treatment.html">Treatment</a>
+				<a href="biblio.html">Bibliography</a>
+			</nav>
 			<h3>Works Cited</h3>
-			<aside>
-				<p><cite>“CDC - Parasites - Malaria.”</cite> Centers for Disease Control and Prevention, Centers for Disease Control and Prevention, <a href="www.cdc.gov/parasites/malaria.index.html">www.cdc.gov/parasites/malaria/index.html</a>.</p>
+			<p><cite>“CDC - Parasites - Malaria.”</cite> Centers for Disease Control and Prevention, Centers for Disease Control and Prevention, <a href="www.cdc.gov/parasites/malaria.index.html">www.cdc.gov/parasites/malaria/index.html</a>.</p>
 				<p><cite>“Fact Sheet about Malaria.”</cite> World Health Organization, World Health Organization, <a href="www.who.int/news-room/fact-sheets/detail/malaria">www.who.int/news-room/fact-sheets/detail/malaria</a>.</p>
-				<p>Lam, Peter. <cite>“Malaria: Symptoms, Treatment, and Prevention.”</cite> Medical News Today, MediLexicon International, 19 Nov. 2018, <a href="www.medicalnewstoday.com/articles/150670.php">www.medicalnewstoday.com/articles/150670.php</a>.</p>
-				<p><cite>“Malaria.”</cite> Mayo Clinic, Mayo Foundation for Medical Education and Research, 13 Dec. 2018, <a href="www.mayoclinic.org/diseases-conditions/malaria/symptoms-causes/syc-20351184">www.mayoclinic.org/diseases-conditions/malaria/symptoms-causes/syc-20351184</a>.</p>
-			</aside>
+			<p>Lam, Peter. <cite>“Malaria: Symptoms, Treatment, and Prevention.”</cite> Medical News Today, MediLexicon International, 19 Nov. 2018, <a href="www.medicalnewstoday.com/articles/150670.php">www.medicalnewstoday.com/articles/150670.php</a>.</p>
+			<p><cite>“Malaria.”</cite> Mayo Clinic, Mayo Foundation for Medical Education and Research, 13 Dec. 2018, <a href="www.mayoclinic.org/diseases-conditions/malaria/symptoms-causes/syc-20351184">www.mayoclinic.org/diseases-conditions/malaria/symptoms-causes/syc-20351184</a>.</p>
 		</main>
 	</body>
 </html>
