--- a/symptoms.html
+++ b/symptoms.html
@@ -3,17 +3,19 @@
 	<head>
 		<title>Symptoms</title>
 		<meta charset="UTF-8" />
+		<link rel="stylesheet" type="text/css" href="malaria.css" />
 	</head>
 	<body>
-		<nav>
-			<a href="index.html">Main Info</a>
-			<a href="symptoms.html">Symptoms</a>
-			<a href="info.html">More Info</a>
-			<a href="treatment.html">Treatment</a>
-			<a href="biblio.html">Bibliography</a>
-			</nav>
 		<main>
-			<h1>Symptoms</h1>
+			<h1 id="symptoms">Symptoms</h1>
+			<hr />
+			<nav>
+				<a href="index.html">Main Info</a>
+				<a href="symptoms.html">Symptoms</a>
+				<a href="info.html">More Info</a>
+				<a href="treatment.html">Treatment</a>
+				<a href="biblio.html">Bibliography</a>
+			</nav>
 			<p>If you have malaria, the symptoms you might experience are:</p>
 			<ul>
 				<li>Fevers</li>
