--- a/treatment.html
+++ b/treatment.html
@@ -3,18 +3,19 @@
 	<head>
 		<title>Treatment</title>
 		<meta charset="UTF-8" />
+		<link rel="stylesheet" type="text/css" href="malaria.css" />
 	</head>
 	<body>
-		<nav>
-			<a href="index.html">Main Info</a>
-			<a href="symptoms.html">Symptoms</a>
-			<a href="info.html">More Info</a>
-			<a href="treatment.html">Treatment</a>
-			<a href="biblio.html">Bibliography</a>
-			</nav>
-		</header>
 		<main>
-			<h1>Treatment</h1>
+			<h1 id="treatment">Treatment</h1>
+			<hr />
+			<nav>
+				<a href="index.html">Main Info</a>
+				<a href="symptoms.html">Symptoms</a>
+				<a href="info.html">More Info</a>
+				<a href="treatment.html">Treatment</a>
+				<a href="biblio.html">Bibliography</a>
+			</nav>
 			<p>Often, people will lower the mosquito population to lower the risk of malaria. However, if you do end up getting malaria, ACTs (Artemisinin-based Combination Therapies) are the best way to treat malaria, and the first line of defense. ACTs are just combinations of different drugs that work in different ways to fight malaria. In the past, chloroquine phosphate was effective, but nowadays, most malaria parasites are resistant to it. There are vaccines being prepared, but for now, none of them are suitable for human use.</p>
 		</main>
 	</body>
